// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.source_index.internal.commitingester.tasks;

option go_package = "go.chromium.org/luci/source_index/internal/commitingester/taskspb";

// Payload of IngestCommits task.
message IngestCommits {
  // Required. The gitiles host. Must be a subdomain of `.googlesource.com`
  // (e.g. chromium.googlesource.com).
  string host = 1;

  // Required. The Git project (e.g. chromium/src).
  string repository = 2;

  // Required. The commit to start the ingestion from. This commit and all of
  // its ancestors will all be ingested.
  //
  // In practice, the ingestion will stop
  //  1. when it reaches a commit that is already ingested, or
  //  2. when it reaches the first commit (the commit with no ancestors).
  string commitish = 3;

  // The page token value to use when calling Gitiles.Log.
  //  - For the first task, this should be "".
  //  - For subsequent tasks, this is the next_page_token value returned by the
  //   last call.
  string page_token = 4;

  // Optional. The task number of IngestCommits task.
  //
  // This is only used for logging/monitoring purpose.
  int64 task_index = 5;
}
